# smidi

./: .clang-format  .gitignore  CMakeLists.txt
include/smidi/: smidi.h
include/smidi_ext/: smidi_messages.h
samples/: CMakeLists.txt  list_devices.cpp  simple_input.cpp  simple_output.cpp
src/: CMakeLists.txt
src/smidi/: CMakeLists.txt  smidi.cpp
src/smidi/winmm/: winmm_device.cpp
src/smidi_ext/: CMakeLists.txt  smidi_messages.cpp
